--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MovieReviewFrontEnd</title>
+  <title>ReviewSense</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="main">
   <app-root></app-root>
+  <footer>
+    <div>
+        <p>Help / About us</p>
+    </div>
+    <div>
+        <p>CopyRight information</p>
+    </div>
+    <div>
+        <p>Follow Us</p>
+    </div>
+</footer>
 </body>
 </html>
