Typo fix in footer.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <p>Help / About us</p>
     </div>
     <div>
-        <p>CopyRight information</p>
+        <p>Copyright information</p>
     </div>
     <div>
         <p>Follow Us</p>
