--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>ReviewSense</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body class="main">
-  <app-root></app-root>
-  <footer>
-    <div>
-        <p>Help / About us</p>
+    <div class="app-body">
+        <app-root></app-root>
     </div>
-    <div>
-        <p>Copyright information</p>
-    </div>
-    <div>
-        <p>Follow Us</p>
-    </div>
-</footer>
+    <footer>
+        <div>
+            <p>Help / About us</p>
+        </div>
+        <div>
+            <p>Copyright information</p>
+        </div>
+        <div>
+            <p>Follow Us</p>
+        </div>
+    </footer>
 </body>
+
 </html>
